# GenAI

./: README.md  benchmark_60_hf.json  dataset _from_hf.py  docs.txt  evaluate_bitsandbytes.py  fetch_wiki_docs.py  kaustubh.ipynb  pyproject.toml  rag_bitsandbytes.py  run_Scifact.py  test_system.py
docs/: GUIDE.md  HF_DATASETS_GUIDE.md
results/: E1_metrics.json  E1_results.json  E2_metrics.json  E2_results.json  all_results.csv  rag_benchmark_progress.csv  results_table.tex  summary_metrics.csv
